--- a/package.json
+++ b/package.json
@@ -14,6 +14,7 @@
     "react-dom": "18.2.0"
   },
   "devDependencies": {
+    "@types/gtag.js": "^0.0.12",
     "@types/node": "18.8.1",
     "@types/react": "18.0.21",
     "eslint": "8.24.0",
